--- a/website.html
+++ b/website.html
@@ -229,8 +229,8 @@
     <button class="tab-button" onclick="showTab('praxis1', event)">Praxis I</button>
     <button class="tab-button" onclick="showTab('civ102', event)">CIV102 Bridge</button>
     <button class="tab-button" onclick="showTab('praxis2', event)">Praxis II</button>
-    <button class="tab-button" onclick="showTab('Resources', event)">Resources</button>
     <button class="tab-button" onclick="showTab('Conclusion', event)">Conclusion</button>
+    <button class="tab-button" onclick="showTab('Resources', event)">Resources</button>
   </div>
 
   <div id="position" class="tab-content active" style="background: none; color: white; box-shadow: none;">
@@ -787,36 +787,36 @@
 </div>
 
 <div id="Conclusion" class="tab-content">
-<div class="section-container fade-section">
-  <h2>One Pager</h2>
-  <div class="image-row">
-    <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
-    <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
+  <div class="section-container fade-section"> 
+    <h2>Conclusion</h2> 
+    <p>
+  In <strong>Praxis I</strong>, I learned to frame design problems through human-centered requirements and ideate broadly using structured creativity. <strong>CIV102</strong> reinforced the power of analysis, prototyping, and precision—but also showed me how physical construction tests our assumptions in a tangible way. <strong>Praxis II</strong> brought everything full circle, challenging me to balance user research, creative divergence, and technical rigor to build something useful, intuitive, and scientifically grounded.
+</p>
+
+<p>
+  Across all three courses, the biggest change wasn’t just in the projects I completed—it was in the way I think. I no longer see engineering design as a linear process. It’s a dynamic, reflective, and human-driven discipline where framing, diverging, converging, and representing each play an essential role. This portfolio is more than a collection of deliverables—it's a record of how I’ve grown into a more thoughtful, collaborative, and values-driven designer.
+</p>
+
+<p>
+  Moving forward, I’ll carry these lessons with me: that every good design starts with understanding people, that creativity thrives with structure, and that responsible engineering is always grounded in purpose. I’m excited to keep designing, learning, and evolving with these principles at the core of my practice.
+</p>
+
   </div>
 </div>
 
-<div class="section-container fade-section">
-  <h2>CTMF 1</h2>
-  <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
-</div>
-
-<div class="section-container fade-section">
-  <h2>CTMF 2</h2>
-  <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
-</div>
-
-
-
-</div>
 
 <div id="Resources" class="tab-content">
-<div class="section-container fade-section">
-  <h2>One Pager</h2>
-  <div class="image-row">
-    <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
-    <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
+  <div class="section-container fade-section"> 
+    <h2>Introduction</h2> 
+    <p>
+      Engineering design is often thought of as a strictly technical process — a matter of solving problems and building solutions. When I first entered the program, I saw it the same way. My original position on engineering design was rooted in logic, precision, and execution: identify a problem, build something to fix it, and make sure it works. It was a linear approach — straightforward and outcome-focused — shaped by my prior experiences in robotics, programming, and structured problem solving.
+    </p> 
+    <p>
+      Over the course of this term, that perspective has fundamentally evolved. Through three cornerstone projects — <strong>Praxis I</strong>, <strong>CIV102</strong>, and <strong>Praxis II</strong> — I was introduced to a more layered, reflective, and human-centered understanding of engineering design. Each course taught me to see beyond the "what" and into the "why" and "how" of design. I learned to frame problems with empathy, diverge creatively through structured ideation, and converge thoughtfully using evidence-based decision-making tools. These experiences helped me recognize that good engineering isn't just about functionality — it's about values, context, and impact. This portfolio captures that journey and the ways in which my design thinking has matured across each of these domains.
+    </p>
   </div>
 </div>
+
 
 <div class="section-container fade-section">
   <h2>CTMF 1</h2>
