--- a/website.html
+++ b/website.html
@@ -807,7 +807,7 @@
 
 <div id="Resources" class="tab-content">
   <div class="section-container fade-section"> 
-    <h2>Introduction</h2> 
+    <h2>Resources</h2> 
     <p>
       Engineering design is often thought of as a strictly technical process — a matter of solving problems and building solutions. When I first entered the program, I saw it the same way. My original position on engineering design was rooted in logic, precision, and execution: identify a problem, build something to fix it, and make sure it works. It was a linear approach — straightforward and outcome-focused — shaped by my prior experiences in robotics, programming, and structured problem solving.
     </p> 
@@ -816,22 +816,6 @@
     </p>
   </div>
 </div>
-
-
-<div class="section-container fade-section">
-  <h2>CTMF 1</h2>
-  <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
-</div>
-
-<div class="section-container fade-section">
-  <h2>CTMF 2</h2>
-  <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
-</div>
-
-
-
-</div>
-
 
   <button id="backToTop" title="Back to Top">↑ Top</button>
   <script>
