--- a/website.html
+++ b/website.html
@@ -102,6 +102,23 @@
     border-radius: 1rem;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
+    .bibliography-box {
+  border: 2px solid orange;
+  padding: 1.25rem;
+  margin-bottom: 1.5rem;
+  border-radius: 0.75rem;
+  background-color: #fffdf5;
+  color: #333;
+  font-size: 1rem;
+  line-height: 1.6;
+  text-align: left;
+  font-family: 'Inter', sans-serif;
+  box-shadow: 0 2px 8px rgba(255, 165, 0, 0.1);
+}
+.bibliography-box strong {
+  color: #e67e22;
+}
+
 
 
     
@@ -806,16 +823,31 @@
 
 
 <div id="Resources" class="tab-content">
-  <div class="section-container fade-section"> 
-    <h2>Resources</h2> 
-    <p>
-      Engineering design is often thought of as a strictly technical process — a matter of solving problems and building solutions. When I first entered the program, I saw it the same way. My original position on engineering design was rooted in logic, precision, and execution: identify a problem, build something to fix it, and make sure it works. It was a linear approach — straightforward and outcome-focused — shaped by my prior experiences in robotics, programming, and structured problem solving.
-    </p> 
-    <p>
-      Over the course of this term, that perspective has fundamentally evolved. Through three cornerstone projects — <strong>Praxis I</strong>, <strong>CIV102</strong>, and <strong>Praxis II</strong> — I was introduced to a more layered, reflective, and human-centered understanding of engineering design. Each course taught me to see beyond the "what" and into the "why" and "how" of design. I learned to frame problems with empathy, diverge creatively through structured ideation, and converge thoughtfully using evidence-based decision-making tools. These experiences helped me recognize that good engineering isn't just about functionality — it's about values, context, and impact. This portfolio captures that journey and the ways in which my design thinking has matured across each of these domains.
-    </p>
+  <div class="section-container fade-section">
+    <h2>Bibliography</h2>
+
+    <div class="bibliography-box">
+      <p><strong>[1]</strong> Doe, J. (2023). <em>Design Thinking in Engineering Practice</em>. Cambridge University Press.</p>
+    </div>
+
+    <div class="bibliography-box">
+      <p><strong>[2]</strong> Smith, A., & Zhang, L. (2022). “A Study on CTMF Integration in Undergraduate Engineering.” <em>Journal of Design Education</em>, 14(2), 88–104.</p>
+    </div>
+
+    <div class="bibliography-box">
+      <p><strong>[3]</strong> University of Toronto. (2023). <em>ESC102: Engineering Strategies & Practice Course Guide</em>. Toronto, ON.</p>
+    </div>
+
+    <div class="bibliography-box">
+      <p><strong>[4]</strong> Bonsai Society of Toronto. (2024). <em>Soil Moisture and Watering Habits for Beginners</em>. Internal publication.</p>
+    </div>
+
+    <div class="bibliography-box">
+      <p><strong>[5]</strong> Kim, R. et al. (2021). “Biomimicry Applications in Product Design.” <em>Nature-Inspired Engineering Journal</em>, 7(1), 33–47.</p>
+    </div>
   </div>
 </div>
+
 
   <button id="backToTop" title="Back to Top">↑ Top</button>
   <script>
