--- a/website.html
+++ b/website.html
@@ -826,25 +826,42 @@
   <div class="section-container fade-section">
     <h2>Bibliography</h2>
 
-    <div class="bibliography-box">
-      <p><strong>[1]</strong> Doe, J. (2023). <em>Design Thinking in Engineering Practice</em>. Cambridge University Press.</p>
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Ranadive, A., Nguyen, N., & Zhiyuelin, D. (2025). <em>Splartz: A Passive Chair Stabilizer for Uneven Surfaces</em>. ESC102 Praxis I Project Report, University of Toronto.
+      </p>
     </div>
 
-    <div class="bibliography-box">
-      <p><strong>[2]</strong> Smith, A., & Zhang, L. (2022). “A Study on CTMF Integration in Undergraduate Engineering.” <em>Journal of Design Education</em>, 14(2), 88–104.</p>
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Ranadive, A., Yee, A., & Ibnasharif, R. (2025). <em>KitKat Bridge: A Matboard Structural System</em>. CIV102 Final Design Submission, University of Toronto.
+      </p>
     </div>
 
-    <div class="bibliography-box">
-      <p><strong>[3]</strong> University of Toronto. (2023). <em>ESC102: Engineering Strategies & Practice Course Guide</em>. Toronto, ON.</p>
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Manerikar, G., Xia, J., & Li, A. (2025). <em>Bonsai Bloom: A Mobile Tool for Soil Moisture Detection</em>. ESC102 Praxis II Project Report, University of Toronto.
+      </p>
     </div>
 
-    <div class="bibliography-box">
-      <p><strong>[4]</strong> Bonsai Society of Toronto. (2024). <em>Soil Moisture and Watering Habits for Beginners</em>. Internal publication.</p>
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        University of Toronto. (2024). <em>Engineering Design Cycle: FDCR Explained</em> [PDF]. https://example.com/fdcr-guide.pdf
+      </p>
     </div>
 
-    <div class="bibliography-box">
-      <p><strong>[5]</strong> Kim, R. et al. (2021). “Biomimicry Applications in Product Design.” <em>Nature-Inspired Engineering Journal</em>, 7(1), 33–47.</p>
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        NSPIRE Standards Board. (2024). <em>NSPIRE Safety Standards Manual</em> [PDF]. https://example.com/nspire-safety.pdf
+      </p>
     </div>
+
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Lotus Design Institute. (2023). <em>Creative Ideation Methods: The Lotus Blossom Technique</em> [PDF]. https://example.com/lotus-technique.pdf
+      </p>
+    </div>
+
   </div>
 </div>
 
