--- a/website.html
+++ b/website.html
@@ -824,7 +824,7 @@
 
 <div id="Resources" class="tab-content">
   <div class="section-container fade-section">
-    <h2>Bibliography</h2>
+    <h2>Resources</h2>
 
     <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
       <p style="margin: 0; font-size: 1.1rem; color: #333;">
