--- a/website.html
+++ b/website.html
@@ -846,19 +846,19 @@
 
     <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
       <p style="margin: 0; font-size: 1.1rem; color: #333;">
-        University of Toronto. (2024). <em>Engineering Design Cycle: FDCR Explained</em> [PDF]. https://example.com/fdcr-guide.pdf
+        Ranadive, A., Nguyen, N., Zhiyuelin, D., & Chandresh Balakrishnan (2025). <em>Praxis I Design Report</em> [PDF].
       </p>
     </div>
 
     <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
       <p style="margin: 0; font-size: 1.1rem; color: #333;">
-        NSPIRE Standards Board. (2024). <em>NSPIRE Safety Standards Manual</em> [PDF]. https://example.com/nspire-safety.pdf
+        Ranadive, A., Yee, A., & Ibnasharif, R., & Chandresh Balakrishnan (2025). <em>CIV 102 Bridge Design Calculations</em> [PDF]
       </p>
     </div>
 
     <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
       <p style="margin: 0; font-size: 1.1rem; color: #333;">
-        Lotus Design Institute. (2023). <em>Creative Ideation Methods: The Lotus Blossom Technique</em> [PDF]. https://example.com/lotus-technique.pdf
+        Ranadive, A., Yee, A., & Ibnasharif, R., & Chandresh Balakrishnan (2025). <em>CIV 102 Bridge Design Report</em> [PDF]. https://example.com/lotus-technique.pdf
       </p>
     </div>
 
