--- a/website.html
+++ b/website.html
@@ -846,19 +846,49 @@
 
     <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
       <p style="margin: 0; font-size: 1.1rem; color: #333;">
-        Ranadive, A., Nguyen, N., Zhiyuelin, D., & Chandresh Balakrishnan (2025). <em>Praxis I Design Report</em> [PDF].
+        Ranadive, A., Nguyen, N., Zhiyuelin, D., & Balakrishnan, C. (2025). <em>Praxis I One Pager</em> [PDF].
       </p>
     </div>
 
     <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
       <p style="margin: 0; font-size: 1.1rem; color: #333;">
-        Ranadive, A., Yee, A., & Ibnasharif, R., & Chandresh Balakrishnan (2025). <em>CIV 102 Bridge Design Calculations</em> [PDF]
+        Ranadive, A., Nguyen, N., Zhiyuelin, D., & Balakrishnan, C. (2025). <em>Praxis I Design Report</em> [PDF].
       </p>
     </div>
 
     <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
       <p style="margin: 0; font-size: 1.1rem; color: #333;">
-        Ranadive, A., Yee, A., & Ibnasharif, R., & Chandresh Balakrishnan (2025). <em>CIV 102 Bridge Design Report</em> [PDF]. https://example.com/lotus-technique.pdf
+        Ranadive, A., Yee, A., & Ibnasharif, R., & Balakrishnan, C. (2025). <em>CIV 102 Bridge One Pager</em> [PDF].
+      </p>
+    </div>
+
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Ranadive, A., Yee, A., & Ibnasharif, R., & Balakrishnan, C. (2025). <em>CIV 102 Bridge Design Calculations</em> [PDF].
+      </p>
+    </div>
+
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Ranadive, A., Yee, A., & Ibnasharif, R., & Balakrishnan, C. (2025). <em>CIV 102 Bridge Design Report</em> [PDF].
+      </p>
+    </div>
+
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Manerikar, G., Xia, J., Li, A., & Balakrishnan, C. (2025). <em>Praxis II One Pager</em> [PDF].
+      </p>
+    </div>
+
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Manerikar, G., Xia, J., Li, A., & Balakrishnan, C. (2025). <em>Praxis II Beta Release Print</em> [PDF].
+      </p>
+    </div>
+
+    <div style="border: 3px solid orange; padding: 1.5rem; border-radius: 0.75rem; background-color: #fff7eb; margin-bottom: 1.5rem;">
+      <p style="margin: 0; font-size: 1.1rem; color: #333;">
+        Manerikar, G., Xia, J., Li, A., & Balakrishnan, C. (2025). <em>Praxis II Showcase Slideshow</em> [PDF].
       </p>
     </div>
 
