--- a/website.html
+++ b/website.html
@@ -241,8 +241,8 @@
   </header>
 
   <div class="tabs">
-    <button class="tab-button" onclick="showTab('Introduction', event)">Introduction</button>
-    <button class="tab-button active" onclick="showTab('position', event)">Original Position</button>
+    <button class="tab-button active" onclick="showTab('Introduction', event)">Introduction</button>
+    <button class="tab-button" onclick="showTab('position', event)">Original Position</button>
     <button class="tab-button" onclick="showTab('praxis1', event)">Praxis I</button>
     <button class="tab-button" onclick="showTab('civ102', event)">CIV102 Bridge</button>
     <button class="tab-button" onclick="showTab('praxis2', event)">Praxis II</button>
