--- a/website.html
+++ b/website.html
@@ -250,7 +250,7 @@
     <button class="tab-button" onclick="showTab('Resources', event)">Resources</button>
   </div>
 
-  <div id="position" class="tab-content active" style="background: none; color: white; box-shadow: none;">
+  <div id="position" class="tab-content" style="background: none; color: white; box-shadow: none;">
     <div class="podium-container">
       <img id="soccerPodium" class="podium" src="soccer-podium.png" alt="Soccer Podium">
       <img id="tkdPodium" class="podium" src="tkd-podium.png" alt="TKD Podium">
@@ -291,7 +291,7 @@
     </div>
   </div>
 
-  <div id="Introduction" class="tab-content">
+  <div id="Introduction" class="tab-content active">
   <div class="section-container fade-section"> 
     <h2>Introduction</h2> 
     <p>
