--- a/website.html
+++ b/website.html
@@ -559,7 +559,7 @@
   </p>
 
   <figure style="text-align: center;">
-    <img src="drawing.png" alt="Figure 1 - Engineering Drawing of Final Bridge Design" style="max-width: 100%; height: auto;" />
+    <img src="final_sketch.png" alt="Figure 1 - Engineering Drawing of Final Bridge Design" style="max-width: 100%; height: auto;" />
     <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
       <strong>Figure 1:</strong> Engineering drawing prototype used to finalize dimensions and construction strategy.
     </figcaption>
