--- a/website.html
+++ b/website.html
@@ -577,7 +577,7 @@
   </figure>
 
   <p>
-    Finally, we built the full-scale bridge using manila folders, glue, and reinforcement spikes. This physical prototyping stage (Figures 3–8) brought our conceptual and digital plans into reality. Each figure shows a different stage of the construction, from layering components to gluing and clamping the spans. The actual build allowed us to test tolerances, gain hands-on experience with material behavior, and refine our sequence of assembly. We realized the importance of precision and timing in gluing and how critical reinforcements were at load-bearing intersections. This CTMF proved invaluable in moving from theory to practice and closing the gap between idealized models and functional structures.
+    Finally, we built the full-scale bridge using folders and glue. This physical prototyping stage (Figures 3–8) brought our conceptual and digital plans into reality. Each figure shows a different stage of the construction, from layering components to gluing and clamping the spans. The actual build allowed us to test tolerances, gain hands-on experience with material behavior, and refine our sequence of assembly. We realized the importance of precision and timing in gluing and how critical reinforcements were at load-bearing intersections. This CTMF proved invaluable in moving from theory to practice and closing the gap between idealized models and functional structures.
   </p>
 
   <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
