--- a/website.html
+++ b/website.html
@@ -386,7 +386,7 @@
   </p>
 
   <p>
-    Another major learning was how collaboration expands divergence. The team setting meant each member offered ideas I wouldn't have generated alone — like a folding mechanism for portability or vibration-absorbing rubber composites for uneven ground. I learned that <strong>divergence works best when multiple perspectives are layered and built upon</strong>. Everyone’s contributions unlocked new sub-ideas, making the grid richer with each pass.
+    Another major learning was how collaboration expands divergence. The team setting meant each member offered ideas I wouldn't have generated alone — like a folding mechanism for portability or vibration-absorbing rubber composites for uneven ground. I learned that <strong>divergence works best when multiple perspectives are layered and built upon</strong>. Everyone’s contributions unlocked new sub-ideas, making the design space richer.
   </p>
 
   <p>
