--- a/website.html
+++ b/website.html
@@ -464,7 +464,7 @@
   </p>
 
     <div class="image-row">
-      <img src="CIVPager1.png" alt="CIV Page 1" />
+      <img src="CIV.png" alt="CIV Page 1" />
       <img src="CIVPager2.png" alt="CIV Page 2" />
     </div>
   </div>
