--- a/website.html
+++ b/website.html
@@ -460,7 +460,7 @@
   </p>
 
   <p>
-    Ultimately, the bridge reached a maximum load of 996 N before failure — more than double the required target. Our final design was not only structurally sound but also reflected strong teamwork, design intuition, and technical reasoning. By combining engineering principles with practical construction strategies, we produced a bridge that was both robust and efficient under load, demonstrating the successful outcome of our course-defined design challenge.
+    Ultimately, the bridge reached a theoretical maximum load of 996 N before failure — more than double the required target. Our final design was not only structurally sound but also reflected strong teamwork, design intuition, and technical reasoning. By combining engineering principles with practical construction strategies, we produced a bridge that was both robust and efficient under load, demonstrating the successful outcome of our course-defined design challenge.
   </p>
 
     <div class="image-row">
