--- a/website.html
+++ b/website.html
@@ -472,7 +472,7 @@
   <h2>CTMF 1: Diverging Through Classical Brainstorming</h2>
 
   <p>
-    At the beginning of our bridge design process, our team engaged in <strong>classical brainstorming</strong> to generate a wide range of structural concepts before committing to a single design. Each team member contributed ideas individually, which we then shared openly to spark discussion and cross-pollination of insights. This method proved especially valuable in the early stages of the project when we needed to explore diverse approaches to meet the strength, stability, and weight constraints of the CIV102 Bridge Competition. The unfiltered nature of classical brainstorming encouraged creative freedom and allowed even unconventional ideas to be voiced without judgment.
+    At the beginning of our bridge design process, our team engaged in <strong>classical brainstorming</strong> to generate a wide range of structural concepts before committing to a single design. Each team member contributed ideas individually, which we then shared openly to spark discussions. This method proved especially valuable in the early stages of the project when we needed to explore diverse approaches to meet the strength, stability, and weight constraints of the CIV102 Bridge Competition. The unfiltered nature of classical brainstorming encouraged creative freedom and allowed even unconventional ideas to be voiced without judgment.
   </p>
 
   <p>
