--- a/website.html
+++ b/website.html
@@ -476,7 +476,7 @@
   </p>
 
   <p>
-    As a result of this collaborative ideation, we developed several bridge concepts which we later refined through calculations. Three of the most developed ideas are illustrated in Figures 1–3 below. These included a <strong>double-flanged I-beam design</strong> (Figure 1), a <strong>trapezoidal box-beam with multiple reinforcement levels</strong> (Figure 2), and an <strong>enhanced trapezoidal profile with four reinforcement axes</strong> (Figure 3). Once we had these initial ideas, we were able to evaluate each in terms of its moment of inertia, expected failure mode, and material usage. This mathematical validation process helped us see the tradeoffs between simplicity, manufacturability, and load-bearing performance.
+    As a result of this collaborative ideation, we developed several bridge concepts which we later refined through calculations. Three of the ideas are illustrated in Figures 1–3 below. These included a <strong>double-flanged I-beam design</strong> (Figure 1), a <strong>trapezoidal box-beam with multiple reinforcement levels</strong> (Figure 2), and an <strong>enhanced trapezoidal profile with four reinforcement axes</strong> (Figure 3). Once we had these initial ideas, we were able to evaluate each in terms of its moment of inertia, expected failure mode, and material usage. This mathematical validation process helped us see the tradeoffs between simplicity, manufacturability, and load-bearing performance.
   </p>
  <figure style="text-align: center;">
     <img src="design1.png" alt="Figure 1 - Double-flanged I-beam Concept" style="max-width: 100%; height: auto;" />
