--- a/website.html
+++ b/website.html
@@ -654,11 +654,15 @@
   <h2>CTMF 1: Framing through Primary Research</h2>
 
   <p>
-    To begin our design process with a user-centered lens, our team prioritized **primary research** as a way to meaningfully frame the problem space. We engaged with the <strong>Toronto Bonsai Society</strong> and conducted stakeholder conversations to better understand the real challenges faced by bonsai caretakers. One key insight emerged clearly: <strong>beginners are the ones who need the most help</strong>. Experienced hobbyists already have watering routines and visual intuition. But newcomers are often overwhelmed, unsure of when to water, and hesitant to disturb the soil or roots.
+    To begin our design process with a user-centered lens, our team prioritized <strong>primary research</strong> to meaningfully frame the problem space. A pivotal moment came from our conversations with the <strong>Toronto Bonsai Society</strong>, where we learned that <strong>beginners</strong> are the group most in need of support—not advanced hobbyists. Experienced caretakers rely on visual cues and established routines, but newcomers often feel uncertain and lack reliable tools to guide their watering habits.
   </p>
 
   <p>
-    This interaction reframed our original perspective. We initially considered designing for general use, but these conversations emphasized the need for **clarity, simplicity, and confidence** in our output. As a result, we added a new requirement to our design specification: the system must display moisture values in **increments of at least 10%**. This step-size constraint came directly from beginner feedback. They didn't need decimal precision — they needed <em>actionable guidance</em> that felt trustworthy and easy to interpret.
+    One key insight stood out: <strong>Junipers are the most commonly purchased—and commonly overwatered—tree by beginners</strong>. The Society emphasized that Junipers require more moisture than expected, but not saturation, and that many first-time growers unintentionally harm their trees by either overwatering or letting them dry out entirely. This helped us <strong>reframe the opportunity space</strong>—from a general-purpose soil sensor to a tool specifically designed to help <em>beginner Juniper caretakers</em>.
+  </p>
+
+  <p>
+    As a result, we added a new user requirement to our design specification: the system must display moisture values in <strong>increments of at least 10%</strong>. This constraint was directly informed by beginner feedback. They didn’t need hyper-precise measurements—they needed clear, intuitive categories that aligned with actionable decisions. Rather than aiming for complex decimal accuracy, we focused on supporting confidence in care, especially for the most vulnerable user base.
   </p>
 
   <figure style="text-align: center;">
@@ -670,24 +674,21 @@
 
   <div style="border: 3px solid orange; padding: 1.5rem; margin-top: 2rem; border-radius: 0.75rem; background-color: #fff7eb;">
     <p style="font-size: 1.25rem; color: #333; margin: 0;">
-      “Beginners often use (and kill) Junipers, which require more water than some expect, but also don’t want to be soaked” - Josh, Head of Toronto Bonsai Society
+      “Beginners often use (and kill) Junipers, which require more water than some expect, but also don’t want to be soaked.” — Josh, Head of Toronto Bonsai Society
     </p>
   </div>
 
   <p style="margin-top: 2rem;">
-    This stakeholder-driven framing helped us shift from thinking about sensors and data to thinking about <strong>user comprehension and confidence</strong>. Instead of focusing on granular accuracy or app complexity, we began asking: “Would a first-time user know what to do after reading the result?” This led to simplified UI decisions, fewer interactive steps, and clearer visual indicators.
+    This stakeholder input didn’t just shape our feature list—it reshaped our entire outlook on <em>who</em> we were designing for and <em>why</em>. Instead of building a tool to serve all plant owners, we grounded our project in the specific needs of first-time Juniper caretakers. That clarity influenced every downstream decision, from data interpretation to moisture threshold calibration.
   </p>
 
   <p>
-    This CTMF was particularly effective because it anchored our framing in **real human behavior**. While technical research might have led us to pursue more advanced sensing techniques, stakeholder input helped us filter features through a lens of <strong>practical value and psychological ease</strong>. We weren't just designing a measurement tool — we were designing a way to help users trust their care routines and enjoy the experience of growing a bonsai.
+    This CTMF was particularly effective because it anchored our framing in <strong>authentic user experience</strong>. It helped us transition from a generic solution space into one guided by empathy, precision, and targeted utility. Rather than guessing user needs, we framed our problem through direct conversation, and in doing so, built a more focused, impactful solution.
   </p>
 
-  <p>
-    In the end, our early framing through primary research influenced everything that followed: our UI wireframes, our threshold values, our data calibration logic, and even our final evaluation criteria. It reminded us that **framing isn’t just a phase — it’s a compass**, and this CTMF gave us a direction grounded in empathy, simplicity, and purpose.
-  </p>
-
-  <p><em>Effectiveness:</em> This CTMF was highly effective because it directly connected us to our end users, gave us actionable insights to reshape our requirements, and grounded our technical decisions in user-centered values. It provided a foundation for the rest of the design cycle and ensured we were solving the right problem, in the right way, for the right people.</p>
+  <p><em>Effectiveness:</em> This CTMF was highly effective because it allowed us to reframe our opportunity toward a specific user group—beginners—and a specific tree species—Junipers. This gave our design clear boundaries, meaningful constraints, and a purpose rooted in real-world context.</p>
 </div>
+
 
 
   <div class="section-container fade-section">
