--- a/website.html
+++ b/website.html
@@ -769,12 +769,13 @@
   </figure>
 
   <p>
-    The Pugh method was especially helpful during <strong>framing</strong> because it forced us to articulate and weight our evaluation criteria early in the process. We had to determine what attributes actually mattered in the context of field-based soil analysis: accuracy, user simplicity, corrosion resilience, and quantitative capability. This helped prevent us from selecting a design based on aesthetic appeal or subjective team preference. Instead, the Pugh Chart clarified which performance traits we prioritized and helped us frame our final selection accordingly.
-  </p>
+  The Pugh Chart method was especially helpful during the <strong>convergence phase</strong> of our design process. After generating a wide range of ideas—such as the Colour Scanner, Claw, Sponge, and Villi Probe—we needed a way to compare these options objectively. The Pugh Chart provided a structured format to evaluate each design against the same set of weighted criteria: accuracy, user simplicity, corrosion resistance, and quantitative output. This allowed us to make a clear, evidence-based decision without defaulting to personal preferences or team biases.
+</p>
 
-  <p>
-    Evaluating the effectiveness of this CTMF, it is clear that the Pugh Chart method provided an accessible yet powerful tool for converging toward the best design option. It balanced qualitative judgment with quantitative rationale, encouraged critical discussion, and offered a visual summary that all team members could easily interpret. In the future, I would absolutely use this CTMF again—especially in group settings—because it keeps ideation grounded while still enabling consensus. Overall, this approach deepened my appreciation for convergence as a structured, evidence-based process rather than an arbitrary decision point.
-  </p>
+<p>
+  What made this CTMF particularly effective was how it transformed a potentially subjective discussion into a transparent, collaborative evaluation. Every team member could see the logic behind our final choice, which improved alignment and confidence in the outcome. The visual format made trade-offs easy to communicate, and the scoring process forced us to justify our judgments with real performance considerations. In the end, the Pugh Chart helped us converge on the Colour Scanner concept not just because it felt right—but because it <em>performed right</em> across multiple important metrics. It’s a tool I would strongly consider using again, especially when navigating complex trade-offs in a team setting.
+</p>
+
 </div>
 
 <div class="section-container fade-section">
