--- a/website.html
+++ b/website.html
@@ -206,6 +206,34 @@
   background-color: #6b7280;
 }
 
+    .quick-nav {
+  position: fixed;
+  top: 50%;
+  right: 2rem;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  z-index: 999;
+}
+
+.quick-nav button {
+  background-color: #f3f4f6;
+  color: #333;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 9999px;
+  font-weight: 600;
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  transition: background 0.3s ease;
+}
+
+.quick-nav button:hover {
+  background-color: #d1d5db;
+}
+
+
 
     .fade-section {
   opacity: 0;
@@ -305,7 +333,14 @@
 
 
   <div id="praxis1" class="tab-content">
-  <div class="section-container fade-section">
+  <div class="quick-nav">
+  <button onclick="scrollToSection('praxis1-overview')">Overview</button>
+  <button onclick="scrollToSection('praxis1-ctmf1')">CTMF 1</button>
+  <button onclick="scrollToSection('praxis1-ctmf2')">CTMF 2</button>
+  <button onclick="scrollToSection('praxis1-ctmf3')">CTMF 3</button>
+  <button onclick="scrollToSection('praxis1-takeaways')">Key Takeaways</button>
+  </div>
+  <div id="praxis1-overview" class="section-container fade-section">
   <h2>Design Solution: Air Pump Chair Stabilizer</h2>
 
   <p>
@@ -324,8 +359,9 @@
       <img src="Praxis1Pager2.png" alt="Praxis 1 Page 2" />
     </div>
 </div>
-
-  <div class="section-container fade-section">
+  </div>
+  
+  <div id="praxis1-ctmf1" class="section-container fade-section">
   <h2>CTMF 1: Using Standards to Frame Requirements</h2>
 
   <p>
@@ -363,7 +399,7 @@
   </p>
 </div>
 
-  <div class="section-container fade-section">
+  <div id="praxis1-ctmf2" class="section-container fade-section">
   <h2>CTMF 2: Diverging with the Lotus Method</h2>
 
   <p>
@@ -394,7 +430,7 @@
   </p>
 </div>
 
-<div class="section-container fade-section">
+<div id="praxis1-ctmf3" class="section-container fade-section">
   <h2>CTMF 3: Converging with a Measurement Matrix</h2>
 
   <p>
@@ -430,7 +466,7 @@
 
   <p><em>Effectiveness:</em> The Measurement Matrix was a highly effective CTMF in our design process, offering structured comparison, traceability of decision-making, and a clear link between user needs and final outcomes.</p>
 </div>
-<div class="section-container fade-section">
+<div id="praxis1-takeaways" class="section-container fade-section">
   <h2>Final Takeaways</h2>
 
   <p>
@@ -1038,6 +1074,14 @@
     }
   });
 });
+
+  function scrollToSection(id) {
+  const el = document.getElementById(id);
+  if (el) {
+    window.scrollTo({ top: el.offsetTop - 60, behavior: 'smooth' });
+  }
+}
+
 
   </script>
 </body>
