--- a/website.html
+++ b/website.html
@@ -484,7 +484,14 @@
 </div>
 
   <div id="civ102" class="tab-content">
-  <div class="section-container fade-section">
+  <div class="quick-nav">
+  <button onclick="scrollToSection('civ102-overview')">Overview</button>
+  <button onclick="scrollToSection('civ102-ctmf1')">CTMF 1</button>
+  <button onclick="scrollToSection('civ102-ctmf2')">CTMF 2</button>
+  <button onclick="scrollToSection('civ102-ctmf3')">CTMF 3</button>
+  <button onclick="scrollToSection('civ102-takeaways')">Key Takeaways</button>
+  </div>
+  <div id="civ102-overview" class="section-container fade-section">
   <h2>CIV102 One-Pager Summary</h2>
 
   <p>
@@ -504,7 +511,7 @@
       <img src="CIVPager2.png" alt="CIV Page 2" />
     </div>
   </div>
-  <div class="section-container fade-section">
+  <div id="civ102-ctmf1" class="section-container fade-section">
   <h2>CTMF 1: Diverging Through Classical Brainstorming</h2>
 
   <p>
@@ -540,7 +547,7 @@
 
 </div>
 
-  <div class="section-container fade-section">
+  <div id="civ102-ctmf2" class="section-container fade-section">
   <h2>CTMF 2: Converging Using a Measurement Matrix</h2>
 
   <p>
@@ -587,7 +594,7 @@
     Using this CTMF not only facilitated convergence but also deepened our understanding of how comparative analysis strengthens engineering judgment. It allowed us to validate qualitative design ideas through quantitative evidence and uncover flaws that may have otherwise gone unnoticed. The matrix also helped us facilitate team discussion, enabling each member to weigh trade-offs transparently. This was especially useful when some metrics were strong in one design but weak in others, which led to meaningful conversations about what we value in structural integrity. Ultimately, the process emphasized the importance of <strong>structured evaluation</strong> over intuition, ensuring we chose a design supported by clear evidence and robust metrics.
   </p>
 </div>
-  <div class="section-container fade-section">
+  <div id="civ102-ctmf3" class="section-container fade-section">
   <h2>CTMF 3: Prototyping</h2>
 
   <p>
@@ -645,7 +652,7 @@
 </div>
 
 
-<div class="section-container fade-section">
+<div id="civ102-takeaways" class="section-container fade-section">
   <h2>Final Takeaways</h2>
 
   <p>
@@ -666,7 +673,14 @@
 
 
 <div id="praxis2" class="tab-content">
-  <div class="section-container fade-section">
+  <div class="quick-nav">
+  <button onclick="scrollToSection('praxis2-overview')">Overview</button>
+  <button onclick="scrollToSection('praxis2-ctmf1')">CTMF 1</button>
+  <button onclick="scrollToSection('praxis2-ctmf2')">CTMF 2</button>
+  <button onclick="scrollToSection('praxis2-ctmf3')">CTMF 3</button>
+  <button onclick="scrollToSection('praxis2-takeaways')">Key Takeaways</button>
+  </div>
+  <div id="praxis2-overview" class="section-container fade-section">
   <h2>Design Summary: Bonsai Bloom</h2>
 
   <p>
@@ -686,7 +700,7 @@
     </div>
   </div>
 
-  <div class="section-container fade-section">
+  <div id="praxis2-ctmf1" class="section-container fade-section">
   <h2>CTMF 1: Framing through Primary Research</h2>
 
   <p>
@@ -727,7 +741,7 @@
 
 
 
-  <div class="section-container fade-section">
+  <div id="praxis2-ctmf2" class="section-container fade-section">
   <h2>CTMF 2: Diverging with Biomimicry and Morph Chart</h2>
 
   <p>
@@ -773,7 +787,7 @@
 </div>
 
 
-  <div class="section-container fade-section">
+  <div id="praxis2-ctmf3" class="section-container fade-section">
   <h2>CTMF 3: Converging with Pugh Charts</h2>
 
   <p>
@@ -814,7 +828,7 @@
 
 </div>
 
-<div class="section-container fade-section">
+<div id="praxis2-takeaways" class="section-container fade-section">
 <h2>Final Takeaways</h2>
 
 <p>
